# cuda-oxide

./: Cargo.toml  PRINCIPLES.md  README.md
.memory/: TODO.md  lessons.md  protocol.md
crates/cargo-oxide/: Cargo.toml  README.md
crates/cargo-oxide/src/: commands.rs  main.rs
crates/cublas-sys/: Cargo.toml  README.md
crates/cublas-sys/src/: lib.rs
crates/cuda-core/: Cargo.toml  README.md
crates/cuda-core/src/: blas.rs  context.rs  device_buffer.rs  lib.rs  memory.rs  module.rs  residency.rs
crates/cuda-core/tests/: blas.rs  residency.rs
crates/cuda-device/: Cargo.toml  README.md
crates/cuda-device/src/: integer.rs  lib.rs  mma.rs  selection.rs
crates/cuda-host/src/: lib.rs  ltoir.rs
crates/cuda-lowp/: Cargo.toml
crates/cuda-lowp/src/: lib.rs
crates/dialect-nvvm/: README.md
crates/dialect-nvvm/src/ops/: integer.rs  mma.rs  mod.rs
crates/mir-importer/: README.md
crates/mir-importer/src/: pipeline.rs
crates/mir-lower/: README.md
crates/mir-lower/src/convert/: interface_impls.rs
crates/rustc-codegen-cuda/: README.md
crates/rustc-codegen-cuda/examples/lowp_roundtrip/: Cargo.toml
crates/rustc-codegen-cuda/examples/lowp_roundtrip/src/: main.rs
cuda-oxide-book/: index.md
cuda-oxide-book/advanced/: matrix-multiply-accelerators.md
cuda-oxide-book/appendix/: api-quick-reference.md  building-from-source.md  glossary.md  roadmap.md  supported-features.md
cuda-oxide-book/compiler/: mlir-dialects.md  pliron.md
cuda-oxide-book/gpu-programming/: memory-and-data-movement.md
cuda-oxide-book/gpu-safety/: the-safety-model.md
(+24 files in other folders)
