[package]
name = "cuda-core"
version = "0.1.0"
edition.workspace = true
description = "Safe RAII wrappers around the CUDA driver API (idiomatic host-side CUDA)"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cuda-bindings = { path = "../cuda-bindings" }
cublas-sys = { workspace = true }
anyhow = { workspace = true }
cuda-lowp = { workspace = true }
half = { workspace = true }
oxide-artifacts = { workspace = true, features = ["object-read"] }

[dev-dependencies]
oxide-artifacts = { workspace = true, features = ["object-write"] }
